# ForGail

./: ForGail.cabal
app/: Main.hs
src/: GailPrelude.hs  Hello.hs
